# game-mcp

./: .gitignore  .markdownlint.yaml  .mcp.json.example  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  setup.sh
.claude/: CLAUDE.md  launch.json  settings.json
.claude/commands/: artist.md  designer.md  engineer.md  lead.md  qa.md  story.md
.github/workflows/: build.yml  validate.yml
Assets/Settings/: PC_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/_Project/: README.md
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
config/: providers.yaml
lib/: deps.js  index.js  launcher.js  prompts.js  scaffold.js  secrets.js  validate.js
mcp-server/: server.py
src/doomed/: _project.py
templates/common/: pyproject.toml
templates/common/claude/: settings.json
templates/common/claude/commands/: audio.md  designer.md  lead.md  qa.md  story.md
templates/common/src/game_mcp/: _project.py
templates/common/src/game_mcp/mcp_team/: __main__.py  _context.py  server.py
templates/common/src/game_mcp/mcp_team/audit/: logger.py
templates/common/src/game_mcp/mcp_team/state/: manager.py  models.py
templates/common/src/game_mcp/mcp_team/tools/: bible.py  context.py  coordination.py  external.py  tasks.py
templates/common/workflow/: task-templates.yaml  tasks.md  team-state.json
templates/unity-2d/: env.example  mcp.json
templates/unity-3d/: env.example  mcp.json
templates/web/: env.example  mcp.json
tools/blender-addon/: README.md  addon.py
workflow/: decisions.md  task-templates.yaml  tasks.md
(+26 files in other folders)
