[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doomed"
version = "3.0.0"
description = "Bible-first game development framework with multi-agent MCP"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.25,<2",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "Pillow>=12.0",
    "rembg[cpu]>=2.0.73",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doomed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
